<resources>
    <string name="app_name">SJBC Winter Series</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="appwidget_text">Lap</string>
    <string name="add_widget">Add widget</string>
    <string name="default_result_value">- -</string>
    <string name="title_activity_base_winter_series">BaseWinterSeriesActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="road_resuls_gathering">Road</string>
    <string name="time_trial_results_gathering">TimeTrial</string>
    <string name="nav_results">Results Taking</string>
    <string name="main_page">Home</string>
    <string name="settings">Settings</string>
    <string name="san_jose_bicycle_club_winter_series">SJBC Winter Series</string>
    <string name="sjbc_website">www.teamsanjose.org</string>
    <string name="previous_info">Year\'s events</string>
    <string name="help">FAQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment_welcome_message_signin">Hello, \n\n\tIn order to get the most benefit from this application please sign in with your google account or create one below.</string>
    <string name="home_fragment_welcome_message_results">\tAny person can view the current result\'s via this &lt;a href="https://docs.google.com/spreadsheets/d/1Vl_zTQVhqbbAum0A9grDa1stYFmBy1u05FaZp-Z__ds/edit#gid=4">link&lt;/a></string>
    <string name="home_fragment_welcome_message_push_reminder">\tWhen an event\'s results have been finalized a push notification will go out to anyone with this application unless you turn off push from settings.</string>
    <string name="home_fragment_welcome_message_signature">\t-enjoy!\n\n\twscoordinator@teamsanjose.org</string>
    <string name="failed_to_sign_in">Failed to sign in!</string>
    <string name="success_sign_in">Sign in successful!</string>

    <string name="time_trial_start_time_rider_number">Rider num</string>
    <string name="time_trial_start_time">Start time</string>
    <string name="time_trial_start_time_rider_place">Place</string>
    <string name="time_trial_finish_time">Finish time</string>
    <string name="sign_out">Sign out</string>
    <string name="on_google_sign_in_failure">There was an error with signing you in, some features maybe unavailable</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_time_trial_activity">Time Trial</string>
    <string name="title_activity_road_race_activity">Road Race</string>
    <string name="time_trial_start_service">Start</string>
    <string name="time_trial_reset_service">Restart</string>
    <string name="time_trial_stop_service">Stop</string>
    <string name="time_trial_start_mode">S/F - Start</string>
    <string name="time_trial_finish_mode">S/F - Finish</string>
</resources>
