<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_entry"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/main_page" />

    <item android:title="@string/previous_info">

    </item>
    <item android:title="@string/nav_results"
        android:id="@+id/result_taking_menu">
        <menu>
            <item
                android:id="@+id/nav_road"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/road_resuls_gathering" />
            <item
                android:id="@+id/nav_time_trial"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/time_trial_results_gathering" />
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/export" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/settings" />

</menu>
