<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentTop="true"
    android:id="@+id/headerLayout"
    android:weightSum="1"
    android:background="@color/niceShadeOfLightGreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_trial_start_time_rider_place"
        android:id="@+id/rider_place_header"
        android:layout_weight="0.15"
        android:textAlignment="center"
        android:layout_margin="@dimen/time_trial_list_item_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_trial_start_time_rider_number"
        android:id="@+id/rider_number_header"
        android:layout_weight="0.15"
        android:textAlignment="center"
        android:layout_margin="@dimen/time_trial_list_item_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_trial_finish_time"
        android:id="@+id/rider_finish_time_header"
        android:layout_weight="0.6"
        android:textAlignment="center"
        android:layout_margin="@dimen/time_trial_list_item_margin"/>

</LinearLayout>